--- a/src/pages/recipes/recipes.html
+++ b/src/pages/recipes/recipes.html
@@ -13,17 +13,11 @@
 
 
 <ion-content padding>
-  <ion-list *ngFor="let recipe of recipes">
-    <ion-card>
-      <ion-card-header>
-        {{ recipe.title }}
-      </ion-card-header>
-      <ion-card-content>
-        {{ recipe.description }}
-        <p>Difficulty: {{ recipe.difficulty }}</p>
-        <p>Amount of Ingredients: {{ recipe.ingredients.length }}</p>
-      </ion-card-content>
-    </ion-card>
+  <ion-list>
+    <button ion-item *ngFor="let recipe of recipes; let i = index" (click)="onLoadRecipe()">
+      <h2>{{ recipe.title }}</h2>
+      <ion-note>{{ recipe.difficulty }}</ion-note>
+    </button>
   </ion-list>
 
 </ion-content>
