--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -21,7 +21,7 @@
       </ion-item>
       <ion-item>
         <ion-label fixed>Password</ion-label>
-        <ion-input type="password" ngModel name="password" required [minlength]="6"></ion-input>
+        <ion-input type="password" ngModel name="password" required></ion-input>
       </ion-item>
     </ion-list>
     <button ion-button block type="submit" [disabled]="!f.valid">Singin</button>
